<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_top_rated"
        android:orderInCategory="100"
        android:title="@string/PREF_SORT_BY_TOP_RATED"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_most_popular"
        android:orderInCategory="200"
        android:title="@string/PREF_SORT_BY_MOST_POPULAR"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_favorite"
        android:orderInCategory="300"
        android:title="@string/PREF_SORT_BY_FAVOURITE"
        app:showAsAction="never"/>

</menu>

