<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/margin_32dp"
tools:context=".UI.DetailActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:minHeight="185dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageView
            android:id="@+id/imageview_poster"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:contentDescription="@string/description_movie_poster"
            android:src="@drawable/placeholder" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingEnd="@dimen/margin_2dp"
            android:paddingLeft="@dimen/margin_5dp"
            android:paddingRight="@dimen/margin_2dp"
            android:paddingStart="@dimen/margin_5dp">

            <TextView
                android:id="@+id/textview_release_date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_release_date"
                android:textSize="@dimen/abc_text_size_medium_material"
                tools:ignore="PrivateResource" />

            <TextView
                android:id="@+id/textview_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/margin_2dp"
                android:paddingLeft="@dimen/margin_10dp"
                android:paddingRight="@dimen/margin_2dp"
                android:text="@string/example_release_date"
                android:textSize="@dimen/abc_text_size_large_material"
                tools:ignore="PrivateResource" />

            <TextView
                android:id="@+id/textview_vote_average_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_10dp"
                android:text="@string/title_vote_average"
                android:textSize="@dimen/abc_text_size_medium_material"
                tools:ignore="PrivateResource" />

            <TextView
                android:id="@+id/textview_vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/margin_2dp"
                android:paddingLeft="@dimen/margin_10dp"
                android:paddingRight="@dimen/margin_5dp"
                android:text="@string/example_vote_average"
                android:textSize="@dimen/abc_text_size_large_material"
                tools:ignore="PrivateResource" />

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/btn_review"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="start"
                    android:padding="@dimen/margin_10dp"
                    app:srcCompat="@android:drawable/ic_menu_more" />

                <ImageButton
                    android:id="@+id/btn_trailer"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:padding="@dimen/margin_10dp"
                    android:src="@drawable/ic_ondemand_video_black_24dp" />

                <CheckBox
                    android:id="@+id/btn_favorite"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="#00ffffff"
                    android:layout_gravity="end"
                    android:layout_marginLeft="160dp"
                    android:padding="@dimen/margin_10dp"
                    android:button="@android:drawable/btn_star"
                    />


            </android.support.design.widget.CoordinatorLayout>


        </LinearLayout>

    </LinearLayout>


<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/overview_layout">


    <TextView
        android:id="@+id/textview_original_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_5dp"
        android:paddingTop="@dimen/margin_10dp"
        android:text="@string/example_original_title"
        android:textSize="@dimen/abc_text_size_headline_material"
        tools:ignore="PrivateResource" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_overview" />

    </ScrollView>
</LinearLayout>
</LinearLayout>
